--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     </ul>
   </div>
 </nav>
-<div class="container">
+<div class="row">
   <div class="col-md-2">
     <app-categories></app-categories>
   </div>
