--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,1 +1,9 @@
-<p>produits works!</p>
+<table class="table table-striped">
+  <tr>
+    <th>Name</th><th>Price</th>
+  </tr>
+  <tr *ngFor="let p of products._embedded.products">
+    <td>{{p.name}}</td>
+    <td>{{p.price}}</td>
+  </tr>
+</table>
