--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -4,6 +4,6 @@
   </tr>
   <tr *ngFor="let p of products._embedded.products">
     <td>{{p.name}}</td>
-    <td>{{p.price}}</td>
+    <td>{{p.price | number:'0.3'}}</td>
   </tr>
 </table>
