--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     </ul>
     <ul class="nav navbar-nav pull-right">
       <li>
-        <a>Login</a>
+        <a routerLink="/login">Login</a>
       </li>
     </ul>
   </div>
